[package]
name = "blueprint-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
azure_core = "0.15.0"
azure_data_tables = "0.15.0"
azure_identity = "0.15.0"
azure_security_keyvault = "0.15.0"
azure_storage = "0.15.0"
azure_storage_blobs = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
time = { version = "0.3.28", features = ["serde-well-known"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }
