[package]
name = "blueprint-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-multipart = "0.6.1"
actix-web = "4.4.0"
anyhow = "1.0.75"
async-channel = "1.9.0"
azure_core = "0.15.0"
azure_identity = "0.15.0"
azure_security_keyvault = "0.15.0"
azure_storage = "0.15.0"
azure_storage_blobs = "0.15.0"
bson = "2.7.0"
bytes = "1.5.0"
cache_loader_async = { version = "0.2.1", features = ["lru-cache"] }
env_logger = "0.10.0"
futures = "0.3.28"
globset = "0.4.13"
image = "0.24.7"
imageproc = "0.23.0"
itertools = "0.11.0"
log = "0.4.20"
lru = "0.11.1"
maplit = "1.0.2"
mime = "0.3.17"
mongodb = "2.6.1"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
slug = "0.1.4"
time = { version = "0.3.28", features = ["serde-well-known"] }
tokio = { version = "1.32.0", features = ["fs"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }
zip = "0.6.6"
